--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <!-- Meta data for SEO purposes. -->
-    <title> {{page.title}} </title>
+    <title>Ms. Gloria's Kitchen</title>
     <meta name="description" content="{{page.meta-description}}">
     <meta name="keywords" content="{{page.meta-keywords}}">
 
