intial setup/layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,20 @@
 </head>
 <body>
 
+  <header class="grid">
+  <div class="col-4-middle">
+    <a href="/">
+      <h2 class="logo"> LOGO </h2>
+    </a>
+  </div>
+  <nav class="col-8-middle right">
+    <a href="#"> Link </a>
+    <a href="#"> Link </a>
+    <a href="#"> Link </a>
+    <a href="#" class="emphasis"> Call to Action </a>
+  </nav>
+</header>
+
     {{content}}
 
     <!-- adds jQuery library to your site -->
