--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="/assets/custom.css"/>
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" type="image/png" href="/images/fav3.png">
+    <link rel="shortcut icon" type="image/png" href="/images/MGKfav.png">
 
 </head>
 <body>
