--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,17 +50,20 @@
 <body>
 
   <header class="grid">
-  <div class="col-4-middle">
-    <a href="/">
-      <h2 class="logo"> LOGO </h2>
-    </a>
-  </div>
-  <nav class="col-8-middle right">
-    <a href="#"> Link </a>
-    <a href="#"> Link </a>
-    <a href="#"> Link </a>
-    <a href="#" class="emphasis"> Call to Action </a>
-  </nav>
+    <div class="col-2-middle">
+      <a href="/">
+        <img class="center" width="90%" src="/images/MGKfav.png"  alt="Ms. Gloria's Kitchen" />
+      </a>
+    </div>
+    <nav class="col-7-middle center centered">
+      <a href="food"> Food </a>
+      <a href="about"> About </a>
+      <a href="events"> Events </a>
+    </nav>
+
+    <nav class="col-2-middle centered inline socials">
+      <a href="#" class="button-solid"> Connect </a>
+    </nav>
 </header>
 
     {{content}}
@@ -73,6 +76,23 @@
 
     <!-- this is your custom javascript/jQuery file -->
 <script src="/assets/main.js"></script>
+
+<footer class="grid padded">
+<!-- column -->
+<div class="col-12_sm-12-middle  centered">
+<nav class="inline socials">
+  <a href="/https://www.instagram.com/msgloriaskitchen/" target="_blank">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="/" target="_blank">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="/" target="_blank">
+    <i class="far fa-envelope"></i>
+  </a>
+</nav>
+</div>
+</footer>
 
 </body>
 </html>
