--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     </nav>
 
     <nav class="col-2-middle centered inline socials">
-      <a href="#" class="button-solid"> Connect </a>
+      <a href="connect" class="button-solid"> Connect </a>
     </nav>
 </header>
 
