--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,10 +81,10 @@
 <!-- column -->
 <div class="col-12_sm-12-middle  centered">
 <nav class="inline socials">
-  <a href="/https://www.instagram.com/msgloriaskitchen/" target="_blank">
+  <a href="https://www.instagram.com/msgloriaskitchen/" target="_blank">
     <i class="fab fa-instagram"></i>
   </a>
-  <a href="/" target="_blank">
+  <a href="https://www.facebook.com/GlosGarden/" target="_blank">
     <i class="fab fa-facebook-f"></i>
   </a>
   <a href="/" target="_blank">
