about and food layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,9 +41,9 @@
   .tall-50  {  min-height: 50vh;   }
   .tall-100 {  min-height: 100vh;  }
 
-  .dark-bg      {  background-color: rgb(90, 90, 95);     }
-  .light-bg     {  background-color: #fff4ea;  }
-  .featured-bg  {  background-color: #ffdfc3;       }
+  .dark-bg      {  background-color: #7bb59b;     }
+  .light-bg     {  background-color: #ebdfc9;  }
+  .featured-bg  {  background-color: #ebdfc9;       }
 
   .light-text   { color: white; }
   .flex-flip:nth-child(2n){  flex-direction: row-reverse; }
@@ -99,7 +99,7 @@
   /* Icons */
 
   .far, .fab, .fas {        /* default styles for font awesome icons */
-    font-size: 1.5rem;
+    font-size: 6rem;
     margin-bottom: 1rem;
     color: #7bb59b;
     transition: all 1s;
@@ -107,6 +107,14 @@
 
   .far:hover, .fab:hover, .fas:hover {        /* default styles for font awesome icons */
     color: #462f27;
+    transition: all 1s;
+  }
+
+
+  nav .far, .fab, .fas {        /* default styles for font awesome icons */
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    color: #7bb59b;
     transition: all 1s;
   }
 
@@ -181,17 +189,19 @@
     font-weight: 300;
     line-height: 1.5rem;
     min-width: 2.5rem;
-    border: 1px solid #e67e22;
+    border: 1px solid #7bb59b;
+    background-color: #7bb59b;
     padding: 0.5rem;
     border-radius: 100%;
     text-decoration: none;
-    color: #e67e22;
+    color: #462f27;
     margin-top: 0.5rem;
   }
 
     .arrow:hover {
-      color: rgb(60, 60, 60);
-      border-color: rgb(60, 60, 60);
+      color: white;
+      border-color: #462f27;
+      background-color: #462f27;
     }
 
 
