--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@
   .padded   {  padding: 2% 5%;    }
   .padded-1 {  padding: 1rem;  }
   .padded-2 {  padding: 2rem;  }
+  .padded-connect {  padding-top: 1rem;   }
 
   .capped-width { width: 80%; margin: auto;}
 
@@ -53,7 +54,8 @@
   h2, h3, h4, h5, h6 {
     line-height: 1;
     margin-bottom: 0.8rem;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Noto Sans HK', sans-serif;
+    text-transform: uppercase;
   }
 
   h2  { font-size: 2rem;  }
@@ -99,7 +101,7 @@
   /* Icons */
 
   .far, .fab, .fas {        /* default styles for font awesome icons */
-    font-size: 6rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     color: #7bb59b;
     transition: all 1s;
@@ -111,8 +113,8 @@
   }
 
 
-  nav .far, .fab, .fas {        /* default styles for font awesome icons */
-    font-size: 1.5rem;
+  nav a.far, nav a.fab, .fas {        /* default styles for font awesome icons */
+    font-size: 3rem;
     margin-bottom: 1rem;
     color: #7bb59b;
     transition: all 1s;
@@ -494,18 +496,19 @@
   input,
   textarea {
     border-style: solid;
-    border: 2px solid rgb(200, 200, 205);
+    border: 2px solid #7bb59b;
     padding: 0.8em;
     display: block;
     width: 100%;
     font-size: 1rem;
     vertical-align: top;
+    font-family: 'Noto Sans HK', sans-serif;
   }
 
   input:focus,
   textarea:focus {
     outline: none;
-    border: 2px solid #e67e22;
+    border: 2px solid #462f27;
     /* featured color */
   }
 
@@ -534,7 +537,7 @@
     border-radius: 0;
     font-size: 1rem;
   }
-   form .button {
+   form .button-solid {
      width:100%;
    }
 
