homepage / nav updates

--- a/assets/style.css
+++ b/assets/style.css
@@ -210,7 +210,7 @@
   /* Headers and footers */
 
   header {
-    padding: 2% 5%;
+    padding: 1% 5%;
   }
 
   header a,
@@ -273,14 +273,14 @@
   /* Fixed Header Option */
 
   header.fixed {
-    position: fixed;
-    background-color: #f9ca24;
+    position: absolute;
+    background-color: rgba(235, 223, 201, 0.0);
     top:0;
     left:0;
     right:0;
     z-index: 2;
     margin:0;
-    padding: 1%;
+    padding: 1% 5%;
     text-align: center;
   }
   .bump-for-header {
@@ -584,10 +584,7 @@
   }
 
   .clickable-box .overlay {
-    min-height:10rem;
-    padding: 5rem 2rem;
-    background-color: rgba(0,0,10,0.6);
-    color: white;
+    background-color: rgba(235, 223, 201 ,0.6);
   }
 
   .clickable-box p {
