--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,9 +56,9 @@
       </a>
     </div>
     <nav class="col-7-middle center centered">
-      <a href="food"> Food </a>
-      <a href="about"> About </a>
-      <a href="events"> Events </a>
+      <a href="food" class="vid"> Food </a>
+      <a href="about" class="vid"> About </a>
+      <a href="events" class="vid"> Events </a>
     </nav>
 
     <nav class="col-2-middle centered inline socials">
