--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@
   .dark-bg      {  background-color: #7bb59b;     }
   .light-bg     {  background-color: #ebdfc9;  }
   .featured-bg  {  background-color: #ebdfc9;       }
+  .vid-bg     {  background-color: rgba(235, 223, 201, .3);  }
 
   .light-text   { color: white; }
   .flex-flip:nth-child(2n){  flex-direction: row-reverse; }
@@ -154,6 +155,7 @@
     text-transform: uppercase;
     font-size: 0.9rem;
     font-weight: 500;
+    font-weight: 700;
   }
 
   .button:hover {
@@ -239,6 +241,24 @@
     color: #e67e22;
   }
 
+  header nav a.vid {
+    /* padding: 0.5rem 2rem; */
+    margin: 0 0.5rem;
+    /* background-color: rgba(255, 255, 255, 0.3); */
+    border-radius: 2px;
+    color: white;
+    transition: all 1s;
+  }
+
+  header nav a.vid:hover {
+    /* padding: 0.5rem 2rem; */
+    margin: 0 0.5rem;
+    /* background-color: rgba(255, 255, 255, 0.3); */
+    border-radius: 2px;
+    color: #7bb59b;
+    transition: all 1s;
+  }
+
   header nav a.emphasis:hover {
     background-color: #e67e22;
     color: white;
@@ -283,6 +303,9 @@
     padding: 1% 5%;
     text-align: center;
   }
+
+
+
   .bump-for-header {
     min-height: 4rem;
   }
@@ -534,6 +557,7 @@
 
   .email-signup .button-solid {
     padding: 0.8em;
+    font-weight: 700;
     border-radius: 0;
     font-size: 1rem;
   }
