--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,20 @@
       </a>
     </div>
     <nav class="col-7-middle center centered">
+      <span class="dropdown-nav">
       <a href="food"> Food </a>
+      <div class="dropdown-content">
+          <a href="food#catering">Catering</a>
+          <a href="food#mealprep">Meal Prep</a>
+          <a href="food#juice">Juice</a>
+      </div>
+    </span>
+    <span class="dropdown-nav">
       <a href="about"> About </a>
+      <div class="dropdown-content">
+          <a href="about">Kitchen</a>
+          <a href="https://missgloriasgarden.com/" target="_blank">Garden</a>
+      </div>
       <a href="events"> Events </a>
     </nav>
 
