--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,8 +56,20 @@
       </a>
     </div>
     <nav class="col-7-middle center centered">
+      <span class="dropdown-nav">
       <a href="food" class="vid"> Food </a>
+      <div class="dropdown-content">
+          <a href="food#catering" class="vid">Catering</a>
+          <a href="food#mealprep" class="vid">Meal Prep</a>
+          <a href="food#juice" class="vid">Juice</a>
+      </div>
+    </span>
+      <span class="dropdown-nav">
       <a href="about" class="vid"> About </a>
+      <div class="dropdown-content">
+          <a href="about" class="vid">Kitchen</a>
+          <a href="https://missgloriasgarden.com/" class="vid" target="_blank">Garden</a>
+      </div>
       <a href="events" class="vid"> Events </a>
     </nav>
 
