--- a/assets/style.css
+++ b/assets/style.css
@@ -364,7 +364,7 @@
 
   .banner,
   .banner-with-header {
-    background-image: url('../images/adventure.jpg');
+    background-image: url('../images/aboutfood.jpg');
     background-size: cover;
     background-position: center;
     min-height: 80vh;
