--- a/assets/style.css
+++ b/assets/style.css
@@ -364,7 +364,7 @@
 
   .banner,
   .banner-with-header {
-    background-image: url('../images/aboutfood.jpg');
+    background-image: url('../images/aboutfood.JPG');
     background-size: cover;
     background-position: center;
     /* min-height: 50vh; */
