--- a/assets/style.css
+++ b/assets/style.css
@@ -370,6 +370,15 @@
     /* min-height: 50vh; */
   }
 
+  .layer {
+    background-color: rgba(247, 147, 30, 0.5);
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* height: 18rem; */
+}
+
   .fixed {
     background-attachment: fixed;
   }
