--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,20 +57,20 @@
     </div>
     <nav class="col-7-middle center centered">
       <span class="dropdown-nav">
-      <a href="food"> Food </a>
+      <a href="food" class="padded-2"> Food </a>
       <div class="dropdown-content">
-          <a href="food#catering">Catering</a>
-          <a href="food#mealprep">Meal Prep</a>
-          <a href="food#juice">Juice</a>
+          <a href="food#catering"><i class="fas fa-utensil-spoon spoon"></i> Catering</a>
+          <a href="food#mealprep"><i class="fas fa-utensil-spoon spoon"></i> Meal Prep</a>
+          <a href="food#juice"><i class="fas fa-utensil-spoon spoon"></i> Juice</a>
       </div>
     </span>
     <span class="dropdown-nav">
-      <a href="about"> About </a>
+      <a href="about" class="padded-2"> About </a>
       <div class="dropdown-content">
           <a href="about">Kitchen</a>
           <a href="https://missgloriasgarden.com/" target="_blank">Garden</a>
       </div>
-      <a href="events"> Events </a>
+      <a href="events" class="padded-2"> Events </a>
     </nav>
 
     <nav class="col-2-middle centered inline socials">
