--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@
   }
 
   body {
-    font-family: 'Noto Sans HK', sans-serif;
+    font-family: 'Mulish', sans-serif;
     color: #462f27;
   }
 
@@ -55,7 +55,7 @@
   h2, h3, h4, h5, h6 {
     line-height: 1;
     margin-bottom: 0.8rem;
-    font-family: 'Noto Sans HK', sans-serif;
+    font-family: 'Alata', sans-serif;
     text-transform: uppercase;
   }
 
