--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:300,400,500,700,900&display=swap" rel="stylesheet"></link>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- Gridlex -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
