--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:300,400,500,700,900&display=swap" rel="stylesheet"></link>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,600;1,700&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Mulish:wght@300;600&display=swap" rel="stylesheet">
 
     <!-- Gridlex -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
@@ -69,14 +69,14 @@
     <span class="dropdown-nav">
       <a href="about" class="padded-2"> About </a>
       <div class="dropdown-content">
-          <a href="about">Kitchen</a>
-          <a href="https://missgloriasgarden.com/" target="_blank">Garden</a>
+          <a href="about"><i class="fas fa-utensils spoon"></i> Kitchen</a>
+          <a href="https://missgloriasgarden.com/" target="_blank"><i class="fas fa-seedling spoon"></i> Garden</a>
       </div>
       <a href="events" class="padded-2"> Events </a>
     </nav>
 
     <nav class="col-2-middle centered inline socials">
-      <a href="connect" class="button-solid"> Connect </a>
+      <a href="connect" class="button-solid emphasis"> Connect </a>
     </nav>
 </header>
 
