--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,8 @@
 
   body {
     font-family: 'Mulish', sans-serif;
-    color: #462f27;
+    color: #101915;
+    font-weight: 300;
   }
 
    /* this overrides the default padding and margin on gridlex elements */
@@ -36,6 +37,7 @@
   .padded-1 {  padding: 1rem;  }
   .padded-2 {  padding: 0rem 2rem;  }
   .padded-connect {  padding-top: 1rem;   }
+  .padded-movie {padding: 1.2rem 0 1.2rem 0 }
 
   .capped-width { width: 80%; margin: auto;}
 
@@ -57,6 +59,7 @@
     margin-bottom: 0.8rem;
     font-family: 'Alata', sans-serif;
     text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   h2  { font-size: 2rem;  }
@@ -104,12 +107,12 @@
   .far, .fab, .fas {        /* default styles for font awesome icons */
     font-size: 1.5rem;
     margin-bottom: 1rem;
-    color: #7bb59b;
+    color: #B4D22F;
     transition: all 1s;
   }
 
   .far:hover, .fab:hover, .fas:hover {        /* default styles for font awesome icons */
-    color: #462f27;
+    color: #101915;
     transition: all 1s;
   }
 
@@ -147,15 +150,14 @@
   .button-solid,
   .button-inverted {
     text-decoration: none;
-    color: #e67e22;
+    color: white;
     border: 2px solid;
     padding: 0.6rem 2rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     display: inline-block;
     text-transform: uppercase;
     font-size: 0.9rem;
-    font-weight: 500;
-    font-weight: 700;
+    font-weight: 600;
   }
 
   .button:hover {
@@ -173,9 +175,9 @@
   }
 
   .button-solid {
-    background-color: #7bb59b;
-    border-color: #7bb59b;
-    color: #462f27;
+    background-color: #B4D22F;
+    border-color: #B4D22F;
+    color: #fef5eb;
     transition: all 1s;
   }
 
@@ -228,6 +230,8 @@
   .inline a {
     display: inline-block;
     padding: 0.5rem;
+    color: #B4D22F;
+    font-weight: 600;
   }
   nav a:hover {
     color: #7bb59b;
@@ -235,10 +239,10 @@
 
   header nav a.emphasis {
     /* padding: 0.5rem 2rem; */
-    margin: 0 0.5rem;
+    /* margin: 0 0.5rem;
     border: 1px solid #e67e22;
-    border-radius: 2px;
-    color: #e67e22;
+    border-radius: 2px; */
+    color: #fef5eb;;
   }
 
   header nav a.vid {
@@ -255,7 +259,7 @@
     margin: 0 0.5rem;
     /* background-color: rgba(255, 255, 255, 0.3); */
     border-radius: 2px;
-    color: #7bb59b;
+    color: #75ac94;
     transition: all 1s;
   }
 
@@ -367,6 +371,7 @@
     background-image: url('../images/aboutfood.JPG');
     background-size: cover;
     background-position: center;
+    filter:grayscale(100%);
     /* min-height: 50vh; */
   }
 
