--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,7 @@
           <a href="about"><i class="fas fa-utensils spoon"></i> Kitchen</a>
           <a href="https://missgloriasgarden.com/" target="_blank"><i class="fas fa-seedling spoon"></i> Garden</a>
       </div>
+      </span>
       <a href="events" class="padded-2"> Events </a>
     </nav>
 
